# twebd

./: .gitignore  Cargo.toml  LICENSE  README  README.md
src/: app.rs  lib.rs  main.rs
src/cli/: defaults.rs  err.rs  mod.rs  parse.rs  parser.rs  run.rs  runner.rs
src/log/: backlog.rs  config.rs  default.rs  display.rs  logger.rs  mod.rs  native.rs  out.rs  write.rs
src/net/: dproto.rs  err.rs  iproto.rs  mod.rs  socket.rs  tcp.rs  udp.rs
src/srv/: conn.rs  defaults.rs  err.rs  file.rs  http.rs  https.rs  log.rs  mod.rs  root.rs  server.rs
src/syn/: err.rs  message.rs  mod.rs  thread.rs  worker.rs
src/web/: mod.rs
src/web/handle/: get.rs
src/web/http/: consts.rs  delim.rs  err.rs  get.rs  mod.rs  request.rs  response.rs
src/web/http/adapter/: mod.rs  request.rs  response.rs
src/web/http/interop/: buffer.rs  mod.rs  parse.rs
src/web/http/native/: default.rs  display.rs  mod.rs
src/web/http/request/: mod.rs
src/web/http/response/: get.rs  mod.rs
src/web/https/: err.rs  mod.rs  tls.rs
src/web/secure/: tls.rs
ssl/: localhost.crt  localhost.key
