[package]
name = "twebd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
chrono = "0.4.19"
regex = "1.5.4"
mime_guess = "2.0.3"
rustls = "0.20.0"
rustls-pemfile = "0.2.1"
log = "0.4.14"
mio = { version = "0.7.13", features = ["os-poll", "net"] }
